@startuml
' skinparam linetype ortho

entity "Product" as product {
  *id : number <<generated>>
  *creationDate : date
  *updateDate : date
  *lastSaleDate : date
  --
  *seller : number <<FK>>
  *productDetailsId : number <<FK>>
  *name : text
  *quantity : number
  *price : Price
}

entity "ProductDetails" as productDetails {
  *id : number <<generated>>
  --
  *description : string
  *imageUrl : URL
  *productId : number <<FK>>
}

entity "Tag" as tag {
  *id : number <<generated>>
  --
  *name : string
}

entity "Category" as category {
  *id : number <<generated>>
  --
  *name : string
}

entity "Review" as review {
  *id : number <<generated>>
  *creationDate : date
  *updateDate : date
  --
  *fiveStarScore : FiveStarScore
  *description : string
}

entity "User" as user {
  *id : number <<generated>>
  *creationDate : date
  --
  *username : string
  *avgFiveStarScore : FiveStarScore
}

entity "Order" as order {
  *id : number <<generated>>
  *creationDate : date
  *updateDate : date
  --
  *productId : number <<FK>>
  *price: Price
  *sellerId : number <<FK>>
  *buyerId : number <<FK>>
  *address : Address
  *status : OrderStatus
}

'productDetails_Tag ||--o{ tag
'productDetails_Tag ||--o{ productDetails
'productDetails_Category ||--o{ category
'productDetails_Category ||--o{ productDetails
'review_Product ||--|| product
'review_User ||--|| user
'review ||--|| review_User
'review ||--|| review_Product

productDetails }o--o{ tag
productDetails }o--|| category
productDetails ||--|| product
order }o--|| user
product }o--|| user
product ||--|| order
product ||--o{ review
user ||--o{ review
@enduml
